fix(website): stretch background to make it work on iPhones

--- a/website/src/routes/styles.css
+++ b/website/src/routes/styles.css
@@ -19,9 +19,9 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: contain;
 	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
 	background-image: radial-gradient(
 			50% 50% at 50% 50%,
 			rgba(255, 255, 255, 0.75) 0%,
